# cs50g

./: .cmake-format.yaml  CMakeLists.txt  CMakeSettings.json
src/: GraphicsContext.cpp  GraphicsContext.hpp  MySDL.cpp  MySDL.hpp  SmartRenderer.cpp  SmartRenderer.hpp  SmartSurface.cpp  SmartSurface.hpp  SmartTexture.cpp  SmartTexture.hpp  SmartWindow.cpp  SmartWindow.hpp  Sprite.cpp  Sprite.hpp  cs50g.cpp
